# python-rapidobj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE.md  benchmark.cpp  benchmark.py  benchmark_overhead.py  feature_parity.py  main.cpp  main.py  pyproject.toml  pyrightconfig.json  rapidobj.pyi  sampling_points.py
.github/workflows/: ci.yml  release.yml
examples/: parse_basic.py  parse_error.py
scripts/: check_release_version.py  release.py
src/: rapidobj_ext.cpp
tests/: smoke_test.py
