[project]
name = "rapidobj"
version = "0.1.5"
description = "Fast OBJ parser with Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dhh/rapidobj-play"
Repository = "https://github.com/dhh/rapidobj-play"
Issues = "https://github.com/dhh/rapidobj-play/issues"

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
sdist.inclusion-mode = "manual"
sdist.include = [
    "CMakeLists.txt",
    "LICENSE",
    "README.md",
    "RELEASE.md",
    "examples/parse_basic.py",
    "examples/parse_error.py",
    "py.typed",
    "pyproject.toml",
    "rapidobj.pyi",
    "src/rapidobj.hpp",
    "src/rapidobj_ext.cpp",
    "tests/smoke_test.py",
]
sdist.exclude = [
    ".git/*",
    ".envrc",
    ".python-version",
    ".venv/*",
    ".venv/**",
    "benchmark",
    "benchmark.cpp",
    "benchmark.py",
    "benchmark_overhead.py",
    "build/*",
    "build/**",
    "dist",
    "dist/*",
    "dist/**",
    "feature_parity.py",
    "main.cpp",
    "main.py",
    "out.ipc",
    "uv.lock",
]

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_*"
build-verbosity = 1
test-command = "python {project}/tests/smoke_test.py"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
